--- a/sytle.css
+++ b/sytle.css
@@ -2,3 +2,91 @@
     margin: 0;
     padding: 0;
 }
+
+:root {
+    --background:#8b8b8b;
+    --light-color:rgb(27, 27, 27);
+}
+
+body {
+    background-color: var(--background);
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    font-size: 3rem;
+    color: rgb(163, 47, 47);
+    font-family: 'Press Start 2P', cursive;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 80px;
+}
+
+.input {
+    display: flex;
+    font-size: 3rem;
+    width: 130px;
+    height: 100px;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Press Start 2P', cursive;
+    background-color: rgb(180, 180, 180);
+    color: var(--light-color);
+    border-radius: 10px;
+    border: none;
+}
+
+.submitBtn {
+    padding: 10px;
+    font-size: 2rem;
+    justify-content: center;
+    cursor: pointer;
+    border-radius: 10px;
+    border: 2px solid var(--light-color);
+    background-color: var(--background);
+    color: var(--light-color);
+    transition: 0.3s ease;
+    font-family: 'Press Start 2P', cursive;
+}
+
+.submitBtn:hover {
+    background-color: var(--light-color);
+    color: var(--background);
+}
+
+.refreshBtn {
+    display: flex;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    border-radius: 10px;
+    border: 2px solid white;
+    background-color: var(--background);
+    border: 2px solid var(--light-color);
+    color: var(--light-color);
+    transition: 0.3s ease;
+    font-family: 'Press Start 2P', cursive;
+}
+
+.refreshBtn:hover {
+    background-color: var(--light-color);
+    color: var(--background);
+}
+
+.text {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    font-size: 2rem;
+    color: var(--light-color);
+    font-family: 'Press Start 2P', cursive;
+}
